--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,10 +57,9 @@ select = ["E", "F", "I", "UP", "B", "C4", "W"]
 
 [tool.mypy]
 python_version = "3.11"
-warn_return_any = false
+warn_return_any = true
 warn_unused_ignores = true
 disallow_untyped_defs = true
-disallow_any_generics = false
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
