--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "aioghost"
-version = "0.2.0"
+version = "0.3.0"
 description = "Async Python client for the Ghost Admin API"
 readme = "README.md"
 license = "MIT"
@@ -21,8 +21,11 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Framework :: AsyncIO",
     "Topic :: Internet :: WWW/HTTP",
+    "Typing :: Typed",
 ]
 dependencies = [
     "aiohttp>=3.8.0",
@@ -58,9 +61,7 @@ select = ["E", "F", "I", "UP", "B", "C4", "W"]
 
 [tool.mypy]
 python_version = "3.11"
-warn_return_any = true
-warn_unused_ignores = true
-disallow_untyped_defs = true
+strict = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
